fixed input view on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ textarea {
       font-size: 18px;
    }
 
+   .datas {
+      margin-left: 10px;
+   }
+
    textarea {
       font-size: 18px;
    }
